--- a/frontend/src/components/NavBar/NavItem.module.css
+++ b/frontend/src/components/NavBar/NavItem.module.css
@@ -11,6 +11,7 @@
   max-height: 100%;
 }
 
+
 .navItem, .logo {
   /* border: 1px solid green; */
   font-size: 16px;
@@ -41,11 +42,20 @@
   transform: scale(1.08);
 }
 
+.navItem:active .svgContainer svg{
+  transform: scale(1);
+}
+
 .navItem:hover {
   background-color: #FAFAFA;
   cursor: pointer;
   transition: 0.2s ease;
 }
+
+.navItem:active {
+  opacity: 0.6;
+}
+
 
 .logo:hover {
   background-color: transparent;
