--- a/frontend/src/components/Posts/PostDetailCard.module.css
+++ b/frontend/src/components/Posts/PostDetailCard.module.css
@@ -2,7 +2,6 @@
   border: 1px solid #DBDBDB;
   border-radius: 3px;
   display: flex;
-  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   max-width: 935px;
@@ -10,8 +9,21 @@
 }
 
 .info {
-  /* border: 1px solid blue; */
-  width: 40%;
+  border: 1px solid blue;
+  /* height: 100%; */
+  /* width: 40%; */
   display: flex;
   flex-direction: column;
+  justify-content: stretch;
+  flex: 1;
+}
+
+.comments {
+  padding: 6px 8px;
+  align-self: stretch;
+}
+
+.comments li {
+  list-style: none;
+  margin: 14px 0;
 }
