--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-smooth: always;
 }
 
 html,
@@ -90,7 +91,8 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-smooth: always;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -129,6 +131,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-a, a:active {
-	text-decoration: none;
+a,
+a:active {
+  text-decoration: none;
 }
