--- a/frontend/src/components/Setting/Setting.module.css
+++ b/frontend/src/components/Setting/Setting.module.css
@@ -1,12 +1,16 @@
 .settingContainer {
-  /* border: 1px solid red; */
+  border: 1px solid #DBDBDB;
+  border-radius: 3px;
   display: flex;
+  max-width: 935px;
+  width: 100%;
 }
 
 .settingNav {
   /* border: 1px solid blue; */
   display: flex;
   flex-direction: column;
+  width: 236px;
 }
 
 .settingNav a {
@@ -23,16 +27,21 @@
 
 .activeLink::before {
   position: absolute;
-  content: "0";
+  content: "";
+  /* z-index: 10; */
   left: 0;
+  top: 0;
   display: inline-block;
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
+  height: 100%;
+  width: 2px;
+  background-color: #262626;
 }
 
 .settingOption {
-  border: 1px solid green;
-  /* width: 500px; */
+  border-left: 1px solid #DBDBDB;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* height: 300px; */
 }
