--- a/frontend/src/components/NavBar/NavBar.module.css
+++ b/frontend/src/components/NavBar/NavBar.module.css
@@ -40,3 +40,9 @@
   background-color: #ffffff;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.0975);
 }
+
+@media screen and (max-width: 1264px){
+  .navBar {
+    width: 72px;
+  }
+}
