--- a/frontend/src/components/Posts/PostPreview.module.css
+++ b/frontend/src/components/Posts/PostPreview.module.css
@@ -1,12 +1,14 @@
-.cardContainer {
-  border: 1px solid #EFEFEF;
-  border-radius: 3px;
-  width: 472px;
-  /* height: 472px; */
+.previewContainer {
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 6px;
 }
 
-/* .captionContainer{
-  border: 1px solid blue;
+.captionContainer{
+  /* border: 1px solid blue; */
   font-size: 14px;
   display: flex;
   gap: 4px;
@@ -24,4 +26,4 @@
   font-size: 14px;
   cursor: pointer;
   font-weight: 500;
-} */
+}
