Styled follow modals. Added user popup on hover of users in modal.

--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -22,7 +22,7 @@
 
 #modal-content {
   position: absolute;
-  background-color: white;
+  /* background-color: white; */
   border-radius: 10px;
   z-index: 99;
 }
