--- a/frontend/src/components/Follows/Follows.module.css
+++ b/frontend/src/components/Follows/Follows.module.css
@@ -4,6 +4,9 @@
   align-items: center;
   width: 400px;
   height: 400px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  animation: onShow 150ms ease;
 }
 
 .title {
@@ -13,4 +16,16 @@
   text-align: center;
   padding: 12px 0;
   border-bottom: 1px solid #dbdbdb;
+}
+
+@keyframes onShow {
+  from {
+    opacity: 0;
+    scale: 1.2;
+  }
+
+  to {
+    opacity: 1;
+    scale: 1;
+  }
 }
