--- a/frontend/src/components/Posts/PostDetailCard.module.css
+++ b/frontend/src/components/Posts/PostDetailCard.module.css
@@ -1,5 +1,5 @@
 .cardContainer {
-  border: 1px solid #DBDBDB;
+  border: 1px solid #dbdbdb;
   border-radius: 3px;
   display: flex;
   flex-direction: row;
@@ -9,6 +9,7 @@
   width: 90vw;
   overflow: hidden;
   position: relative;
+  background-color: #ffffff;
   /* border: 1px solid red; */
 }
 
