--- a/frontend/src/components/Comment/Comment.module.css
+++ b/frontend/src/components/Comment/Comment.module.css
@@ -1,12 +1,16 @@
 
 .form{
-    /* border: 1px solid rgb(183, 182, 182, 0.250); */
-    width: 400px;
+    border-top: 1px solid #EFEFEF;
+    margin-top: 10px;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: space-between;
+    /* width: 400px; */
 }
 
 .cmContainer{
     width: 400px;
-    border-bottom: 1px solid rgb(183, 182, 182, 0.250);
+    border-bottom: 1px solid #EFEFEF;
     position: relative;
     max-height: 500px;
     /* float:left; */
@@ -76,8 +80,9 @@
   }
 
   .inputContainer{
-    border-top: 1px solid rgb(183, 182, 182, 0.250);
-    width: 400px;
+    /* border-top: 1px solid rgb(183, 182, 182, 0.250); */
+    /* border: 1px solid blue; */
+    /* width: 400px; */
     height: 55px;
     display: flex;
     position: relative;
@@ -109,6 +114,6 @@
     font-size: 14px;
     background-color: transparent;
     border: none;
-    font-weight:500
+    font-weight:500;
+    cursor: pointer;
   }
-
