--- a/frontend/src/components/Comment/DeleteModal.module.css
+++ b/frontend/src/components/Comment/DeleteModal.module.css
@@ -5,6 +5,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    border-radius: 10px;
 }
 .deleteBox{
     height: 50px;
