--- a/frontend/src/components/Users/User.module.css
+++ b/frontend/src/components/Users/User.module.css
@@ -60,6 +60,22 @@
   font-weight: 400;
 }
 
+.privateMessage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 28px;
+  margin-top: 20px;
+  width: 66%;
+  background-color: #ffffff;
+  border: 1px solid #efefef;
+  border-top: 1px solid #dbdbdb;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  font-size: 14px;
+  padding: 40px;
+}
+
 .userNavBar {
   display: flex;
   justify-content: center;
