--- a/frontend/src/components/Stories/StoryCarousel.module.css
+++ b/frontend/src/components/Stories/StoryCarousel.module.css
@@ -1,4 +1,6 @@
 .storyCarouselContainer {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   width: 100%;
+  display: flex;
+  gap: 18px;
 }
