fix user select none on likebar

--- a/frontend/src/components/Comment/LikeBar.module.css
+++ b/frontend/src/components/Comment/LikeBar.module.css
@@ -1,5 +1,6 @@
 
 .likeBarContainer{
+    user-select: none;
     /* border: 1px solid red; */
     /* height:120px */
 }
@@ -11,7 +12,7 @@
 }
 
 #svgUnlike{
-    
+
 }
 
 .icons {
