--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,7 +1,7 @@
 .innerBody {
   /* border: 1px solid red; */
   /* width: 85%; */
-  padding: 20px;
+  padding: 30px 20px;
   /* margin-left: auto; */
   margin-left: 244px;
   display: flex;
