added overflow x scroll to story

--- a/frontend/src/components/Feed/Feed.module.css
+++ b/frontend/src/components/Feed/Feed.module.css
@@ -33,11 +33,17 @@
   align-items: center;
 }
 
-.userInfo {
+.userInfoContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 12px;
+}
+
+.userInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
 .username, .fullname {
