--- a/frontend/src/components/Stories/StoryCarousel.module.css
+++ b/frontend/src/components/Stories/StoryCarousel.module.css
@@ -1,6 +1,8 @@
 .storyCarouselContainer {
   /* border: 1px solid red; */
   width: 100%;
+  padding-top: 4px;
   display: flex;
   gap: 18px;
+  overflow-x: auto;
 }
