--- a/frontend/src/components/Stories/StoryCarousel.module.css
+++ b/frontend/src/components/Stories/StoryCarousel.module.css
@@ -1,7 +1,9 @@
 .storyCarouselContainer {
-  /* border: 1px solid red; */
+  border: 1px solid #DBDBDB;
+  border-radius: 4px;
+  background: #FFFFFF;
   width: 100%;
-  padding-top: 4px;
+  padding: 18px;
   display: flex;
   gap: 18px;
   overflow-x: auto;
