adding date, nocomments,like changes

--- a/frontend/src/components/Comment/LikeBar.module.css
+++ b/frontend/src/components/Comment/LikeBar.module.css
@@ -8,10 +8,7 @@
     /* border: 1px solid red; */
     margin-right: 16px;
     /* margin-top: 10px; */
-}
-
-#svgUnlike{
-    
+    user-select: none;
 }
 
 .icons {
@@ -32,4 +29,12 @@
 .likesLabelBold{
     font-weight: 500;
     margin-left: 4px;
+}
+.timeStampDiv{
+    margin-top: 8px;
+}
+
+.timeStamp {
+    font-size: 12px;
+    color: #8E8E8E;
 }
