--- a/frontend/src/components/Comment/Comment.module.css
+++ b/frontend/src/components/Comment/Comment.module.css
@@ -1,6 +1,6 @@
 
 .form{
-    border-top: 1px solid #EFEFEF;
+    border-top: 1px solid #DBDBDB;
     margin-top: 10px;
     /* border: 1px solid red; */
     display: flex;
@@ -10,7 +10,7 @@
 
 .cmContainer{
     width: 400px;
-    border-bottom: 1px solid #EFEFEF;
+    border-bottom: 1px solid #DBDBDB;
     position: relative;
     max-height: 500px;
     /* float:left; */
