--- a/frontend/src/components/Comment/DeleteModal.module.css
+++ b/frontend/src/components/Comment/DeleteModal.module.css
@@ -14,7 +14,7 @@
     /* align-content: center; */
     margin-top: 20px;
     text-align: center;
-    border-bottom: 1px solid rgb(183, 182, 182, 0.250);
+    border-bottom: 1px solid #DBDBDB;
     color: red;
 
 }
