Fixed styling for user popup, follow buttons, follow lists, and user profile page. Added sorting for follow lists.

--- a/frontend/src/components/Elements/ProfilePicture.module.css
+++ b/frontend/src/components/Elements/ProfilePicture.module.css
@@ -1,16 +1,20 @@
+.profileXSmall img,
 .profileSmall img,
 .profileMedium img,
 .profileLarge img,
-.profileXLarge img {
+.profileXLarge img,
+.profileXXLarge img {
   border-radius: 50%;
   overflow: hidden;
   z-index: 1;
 }
 
+.profileXSmall,
 .profileSmall,
 .profileMedium,
 .profileLarge,
-.profileXLarge {
+.profileXLarge,
+.profileXXLarge {
   display: flex;
   justify-content: center;
   align-items: center;
