--- a/frontend/src/components/Follows/Follows.module.css
+++ b/frontend/src/components/Follows/Follows.module.css
@@ -18,6 +18,11 @@
   border-bottom: 1px solid #dbdbdb;
 }
 
+.listContainer {
+  width: 100%;
+  overflow-y: scroll;
+}
+
 @keyframes onShow {
   from {
     opacity: 0;
