--- a/frontend/src/components/Comment/Comment.module.css
+++ b/frontend/src/components/Comment/Comment.module.css
@@ -9,10 +9,10 @@
 }
 
 .cmContainer{
-    width: 400px;
+    /* width: 400px; */
     border-bottom: 1px solid #DBDBDB;
     position: relative;
-    max-height: 500px;
+    /* max-height: 500px; */
     /* float:left; */
     height: 500px;
     overflow:hidden;
