--- a/frontend/src/components/Comment/NoComments.module.css
+++ b/frontend/src/components/Comment/NoComments.module.css
@@ -1,7 +1,8 @@
 
 .container{
-    height: 380px;
-    max-height: 500px;
+    height: 366px;
+    /* height: 100%; */
+    /* max-height: 500px; */
     /* border-bottom: 1px solid rgb(183, 182, 182, 0.250); */
     border-bottom: 1px solid #DBDBDB;
     display: flex;
