--- a/frontend/src/components/Posts/CreatePost/CreatePost.module.css
+++ b/frontend/src/components/Posts/CreatePost/CreatePost.module.css
@@ -65,8 +65,8 @@ input[type="file"] {
   gap: 24px;
 }
 
-.pageTwo {
-  border: 1px solid red;
+.contentContainer {
+  /* border: 1px solid red; */
   display: flex;
   width: 100%;
 }
@@ -94,21 +94,22 @@ input[type="file"] {
 
 .options {
   /* border: 1px solid blue; */
-  width: 50%;
+  width: 100%;
+  max-width: 340px;
 }
 
 .pageThree {
   /* border: 1px solid red; */
-  width: auto;
   display: flex;
   flex-direction: column;
+  padding: 16px;
 }
 
 .pageThree textarea {
   resize: none;
   border: none;
-  padding: 3px 16px;
   font-size: 16px;
+  margin: 12px 0;
 }
 
 .pageThree textarea:focus {
@@ -118,5 +119,5 @@ input[type="file"] {
 .userCard {
   display: flex;
   align-items: center;
-  justify-content: center;
+  gap: 12px;
 }
