--- a/frontend/src/components/Users/User.module.css
+++ b/frontend/src/components/Users/User.module.css
@@ -15,7 +15,9 @@
 .userHeader {
   display: flex;
   justify-content: space-around;
+  /* width: 65%; */
   width: 65%;
+  max-width: 936px;
   padding: 20px;
 }
 
@@ -82,6 +84,7 @@
   justify-content: center;
   margin-top: 20px;
   width: 65%;
+  max-width: 936px;
   border-top: 1px solid #dbdbdb;
 }
 
@@ -101,7 +104,9 @@
   display: flex;
   flex-wrap: wrap;
   gap: 28px;
+  /* width: 65%; */
   width: 65%;
+  max-width: 936px;
 }
 
 .postContainer {
