--- a/frontend/src/components/Users/User.module.css
+++ b/frontend/src/components/Users/User.module.css
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: space-around;
   width: 65%;
+  max-width: 936px;
   padding: 20px;
 }
 
@@ -82,6 +83,7 @@
   justify-content: center;
   margin-top: 20px;
   width: 65%;
+  max-width: 936px;
   border-top: 1px solid #dbdbdb;
 }
 
@@ -102,6 +104,7 @@
   flex-wrap: wrap;
   gap: 28px;
   width: 65%;
+  max-width: 936px;
 }
 
 .postContainer {
@@ -120,6 +123,14 @@
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+.multiImage {
+  position: absolute;
+  text-align: right;
+  width: 100%;
+  padding: 8px;
+  z-index: 1;
 }
 
 .postDetails {
@@ -147,7 +158,7 @@
 }
 
 .postDetails:hover {
-  z-index: 1;
+  z-index: 2;
 }
 
 .previewMedia:hover {
