added advanced settings to create post

--- a/frontend/src/components/Comment/LikeBar.module.css
+++ b/frontend/src/components/Comment/LikeBar.module.css
@@ -17,6 +17,10 @@
     margin: 10px 0;
 }
 
+.icons svg {
+    cursor: pointer;
+}
+
 .likesLabelDiv{
     /* border: 1px solid red; */
     /* margin-top: 20px; */
