Refactored NavBar and NavItem js/css to allow for search tab animation.

--- a/frontend/src/components/NavBar/NavBar.module.css
+++ b/frontend/src/components/NavBar/NavBar.module.css
@@ -10,6 +10,7 @@
   padding: 8px 12px 20px;
   width: 244px;
   background-color: white;
+  transition: 300ms;
 }
 
 .navLink {
@@ -41,8 +42,12 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.0975);
 }
 
-@media screen and (max-width: 1264px){
+@media screen and (max-width: 1264px) {
   .navBar {
     width: 72px;
   }
+}
+
+.miniNavBar {
+  width: 72px;
 }
