--- a/frontend/src/components/Search/Search.module.css
+++ b/frontend/src/components/Search/Search.module.css
@@ -1,6 +1,6 @@
 .searchContainer {
-  /* border: 1px solid blue; */
   border-right: 1px solid #dbdbdb;
+  border-radius: 16px;
   display: flex;
   position: fixed;
   height: 100vh;
@@ -8,6 +8,32 @@
   justify-content: space-between;
   align-items: space-between;
   padding: 8px 12px 20px;
-  width: 244px;
+  width: 472px;
   background-color: white;
+  z-index: -1;
+  animation: slideIn 300ms ease-out;
+}
+
+.hideSearch {
+  animation: slideOut 300ms ease-out;
+}
+
+@keyframes slideIn {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 472px;
+  }
+}
+
+@keyframes slideOut {
+  from {
+    width: 472px;
+  }
+
+  to {
+    width: 0;
+  }
 }
