Added working search feature. Almost completely styled.

--- a/frontend/src/components/Search/Search.module.css
+++ b/frontend/src/components/Search/Search.module.css
@@ -49,6 +49,12 @@
   opacity: 0.9;
 }
 
+.searchResults {
+  max-height: 100%;
+  margin-bottom: auto;
+  padding: 24px 0;
+}
+
 @keyframes slideIn {
   from {
     width: 0;
