--- a/frontend/src/components/Posts/CreatePost/CreatePost.module.css
+++ b/frontend/src/components/Posts/CreatePost/CreatePost.module.css
@@ -161,7 +161,6 @@ input[type="file"] {
 .advancedSettings {
   padding: 12px 16px;
   user-select: none;
-  cursor: pointer;
   font-size: 16px;
   border-bottom: 1px solid #DBDBDB;
 }
@@ -170,6 +169,7 @@ input[type="file"] {
   list-style: none;
   display: flex;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .chevron {
@@ -189,14 +189,49 @@ input[type="file"] {
 }
 
 .switchContainer {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
-  gap: 12px;
-  margin-top: 16px;
+  gap: 24px;
+  margin-top: 18px;
 }
 
 .inputContainer {
   display: flex;
   justify-content: space-between;
+}
+
+input[type="checkbox"] {
+  visibility: hidden;
+}
+
+input[type="checkbox"]:checked + .toggleSwitch {
+  background: #0095F6;
+}
+
+input[type="checkbox"]:checked + .toggleSwitch:after {
+  left: calc(100% - 3px);
+  transform: translateX(-100%);
+}
+
+.toggleSwitch {
+	background: #8E8E8E;
+	border-radius: 100px;
+	position: relative;
+	display: block;
+	width: 44px;
+	height: 28px;
+  cursor: pointer;
+}
+
+.toggleSwitch:after {
+  content: '';
+	position: absolute;
+	background: #FFFFFF;
+	border-radius: 50%;
+	top: 3px;
+	left: 3px;
+	width: 22px;
+	height: 22px;
+	transition: 0.3s;
 }
