--- a/frontend/src/components/Search/Search.module.css
+++ b/frontend/src/components/Search/Search.module.css
@@ -32,6 +32,12 @@
   line-height: 25px;
 }
 
+.inputContainer {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
 .searchInput {
   outline: none;
   border: none;
@@ -49,28 +55,51 @@
   opacity: 0.9;
 }
 
+.cancelButton {
+  position: absolute;
+  right: 14px;
+  font-size: 20px;
+  color: #c7c7c7;
+  cursor: pointer;
+  user-select: none;
+}
+
+.loadingCancelSpinner {
+  position: absolute;
+  right: -16px;
+  user-select: none;
+}
+
 .searchResults {
   max-height: 100%;
   margin-bottom: auto;
   padding: 24px 0;
 }
 
+.loadingSpinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 65vh;
+}
+
 @keyframes slideIn {
   from {
-    width: 0;
+    transform: translateX(-110%);
   }
 
   to {
-    width: 472px;
+    transform: translateX(0);
   }
 }
 
 @keyframes slideOut {
   from {
-    width: 472px;
+    transform: translateX(0);
   }
 
   to {
-    width: 0;
+    transform: translateX(-110%);
   }
 }
