--- a/frontend/src/components/Posts/CreatePost/CreatePost.module.css
+++ b/frontend/src/components/Posts/CreatePost/CreatePost.module.css
@@ -52,6 +52,7 @@ input[type="file"] {
   cursor: pointer;
   user-select: none;
   letter-spacing: 0.4px;
+  text-align: center;
 }
 
 .uploadText:active {
