--- a/frontend/src/components/Posts/CreatePost/CreatePost.module.css
+++ b/frontend/src/components/Posts/CreatePost/CreatePost.module.css
@@ -82,6 +82,10 @@ input[type="file"] {
   color: #262626;
   font-weight: 500;
   font-size: 16px;
+  padding: 14px 0;
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid #DBDBDB;
 }
 
 .prevButton, .nextButton, .submitButton {
