--- a/frontend/src/components/Follows/Suggestion.module.css
+++ b/frontend/src/components/Follows/Suggestion.module.css
@@ -1,15 +1,15 @@
-.followButton {
-    color: #0095F6;
+.followButton, .followingButton {
     font-size: 13px;
     border: none;
-    background: transparent;
+    background:transparent;
     font-weight: 500;
+    cursor: pointer;
+}
+
+.followButton {
+    color: #0095F6;
 }
 
 .followingButton {
     color: black;
-    font-size: 13px;
-    border: none;
-    background: transparent;
-    font-weight: 500;
 }
