--- a/frontend/src/components/Form/LoginForm.module.css
+++ b/frontend/src/components/Form/LoginForm.module.css
@@ -66,3 +66,14 @@
 .showPassword:active {
   opacity: 0.7;
 }
+
+.invalidLogin{
+  /* border: 1px solid red; */
+  color: #ED4956;
+  font-size: 14px;
+  gap: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
