moved getDatDiff into util folder, fixed styling on captions, added blue checks to profile page

--- a/frontend/src/components/Users/User.module.css
+++ b/frontend/src/components/Users/User.module.css
@@ -41,6 +41,14 @@
 .username {
   font-size: 28px;
   font-weight: 300;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.username span {
+  color: #3897F0;
 }
 
 .detailsStats {
