--- a/frontend/src/components/Posts/PostPreview.module.css
+++ b/frontend/src/components/Posts/PostPreview.module.css
@@ -9,10 +9,13 @@
 }
 
 .captionContainer{
-  /* border: 1px solid blue; */
   font-size: 14px;
-  display: flex;
   gap: 4px;
+  line-height: 18px;
+}
+
+.captionContainer a {
+  padding-right: 4px;
 }
 
 .username {
@@ -26,5 +29,4 @@
   color: #8E8E8E;
   font-size: 14px;
   cursor: pointer;
-  font-weight: 500;
 }
