--- a/frontend/src/components/Form/SignUpForm.module.css
+++ b/frontend/src/components/Form/SignUpForm.module.css
@@ -24,7 +24,7 @@
 }
 
 .inputContainer input {
-  padding: 14px 2px 2px 8px;
+  padding: 14px 8px 2px 8px;
   width: 100%;
   height: 36px;
   border: 1px solid #DBDBDB;
@@ -76,10 +76,17 @@
 }
 
 .errorMessage {
+  /* border: 1px solid red; */
   visibility: hidden;
   position: absolute;
   font-size: 12px;
-  top: 6px;
+  top: 0px;
+  /* right: 0; */
+  left: 38px;
+  /* display: inline-block; */
+  word-wrap:break-word;
+  width: 150px;
+  white-space: normal;
 }
 
 .hasNotSubmitted {
@@ -90,7 +97,11 @@
   position: absolute;
   color: #0095F6;
   top: 6px;
-  right: 28px;
+  right: 32px;
   cursor: pointer;
   user-select: none;
+}
+
+.inputHasSubmitted {
+  padding-right: 62px;
 }
