--- a/frontend/src/components/Setting/EditProfile.module.css
+++ b/frontend/src/components/Setting/EditProfile.module.css
@@ -31,6 +31,32 @@
  /* border: 1px solid blue; */
  padding-right: 60px;
  flex: 1;
+ position: relative;
+}
+
+.icon {
+  position: absolute;
+  color: #EE2D3E;
+  top: 2px;
+  right: 76px;
+  z-index: 2;
+  user-select: none;
+}
+
+.error:hover .errorMessage {
+  visibility: visible;
+}
+
+.errorMessage {
+  /* border: 1px solid red; */
+  visibility: hidden;
+  position: absolute;
+  font-size: 12px;
+  top: 5px;
+  left: 34px;
+  word-wrap:break-word;
+  width: 150px;
+  white-space: normal;
 }
 
 .inputContainer input {
@@ -89,4 +115,84 @@
 .deactivateButton {
   background-color: transparent;
   color: #0095F6;
+}
+
+.deactivateModalContainer {
+  border-radius: 12px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+}
+
+.deleteButton, .cancelButton {
+  border: none;
+  cursor: pointer;
+  padding: 16px 8px;
+  font-size: 14px;
+}
+
+.deleteButton {
+  border-bottom: 1px solid #8E8E8E;
+  font-weight: 600;
+  color: #ED4956;
+}
+
+.genderModalContainer {
+  /* border: 1px solid red; */
+  background-color: #FFFFFF;
+  border-radius: 12px;
+  width: 548px;
+  animation: onShow 150ms ease;
+}
+
+.genderModalContainer h3 {
+  border-bottom: 1px solid #DBDBDB;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 12px 0;
+}
+
+.genderOptions {
+  /* border: 1px solid blue; */
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+}
+
+.genderModalContainer label {
+  font-weight: 500;
+  font-size: 14px;
+  color: #262626;
+}
+
+.genderModalContainer input[type=radio] {
+  cursor: pointer;
+}
+
+.doneButton {
+  border: none;
+  border-radius: 6px;
+  background-color: #0095F6;
+  color: #FFFFFF;
+  margin-top: 16px;
+  padding: 12px 18px;
+  cursor: pointer;
+}
+
+.doneButton:hover {
+  opacity: 0.7;
+}
+
+@keyframes onShow {
+  from {
+    opacity: 0;
+    scale: 1.2;
+  }
+
+  to {
+    opacity: 1;
+    scale: 1;
+  }
 }
