--- a/frontend/src/components/Setting/EditProfile.module.css
+++ b/frontend/src/components/Setting/EditProfile.module.css
@@ -171,6 +171,11 @@
   cursor: pointer;
 }
 
+.disableSubmit {
+  opacity: 0.7;
+  cursor: auto;
+}
+
 .doneButton {
   border: none;
   border-radius: 6px;
