--- a/frontend/src/components/Messages/Messages.module.css
+++ b/frontend/src/components/Messages/Messages.module.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 936px;
   height: 94vh;
+  background-color: #ffffff;
   border: 1px solid #dbdbdb;
   border-radius: 4px;
 }
@@ -22,4 +23,11 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
+}
+
+.convoContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 584px;
 }
