--- a/frontend/src/components/NavBar/NavItem.module.css
+++ b/frontend/src/components/NavBar/NavItem.module.css
@@ -5,6 +5,9 @@
   /* border: 1px solid red; */
   overflow: hidden;
 }
+svg {
+  z-index: 11;
+}
 
 .profilePicture img {
   max-width: 100%;
@@ -103,3 +106,23 @@
   width: 48px;
   height: 48px;
 }
+
+.hideNavItem.notifBorder {
+  border: 1px solid #dbdbdb;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+}
+
+.redCircle{
+  background-color: red;
+  border: 1px solid white;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  z-index: 12;
+  position:absolute;
+  margin-bottom: 12px;
+  margin-left: 15px;
+}
+
