--- a/frontend/src/components/Notification/Notification.module.css
+++ b/frontend/src/components/Notification/Notification.module.css
@@ -31,6 +31,13 @@
     font-weight: 600;
   }
 
+  .noNotifications{
+      margin-left: 30px;
+      margin-top: 30px;
+      font-size: 22;
+      font-weight: 500;
+  }
+
   @keyframes slideIn {
     from {
       transform: translateX(-110%);
