--- a/frontend/src/components/Messages/Messages.module.css
+++ b/frontend/src/components/Messages/Messages.module.css
@@ -25,9 +25,46 @@
   line-height: 24px;
 }
 
+.title {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  padding: 12px 16px;
+}
+
 .convoContainer {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   width: 584px;
+}
+
+.userContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 4px 24px;
+}
+
+.userContainer:hover {
+  background-color: #fafafa;
+}
+
+.userDetails {
+  width: 100%;
+  padding: 8px 12px;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.username {
+  font-weight: 500;
+  width: max-content;
+  cursor: pointer;
+}
+
+.fullName {
+  color: #8e8e8e;
+  width: max-content;
 }
