--- a/frontend/src/components/Messages/Messages.module.css
+++ b/frontend/src/components/Messages/Messages.module.css
@@ -14,15 +14,26 @@
   border-right: 1px solid #dbdbdb;
 }
 
-.sessionUser {
+.messagesListHeader {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   height: 60px;
   border-bottom: 1px solid #dbdbdb;
+  padding: 20px;
+}
+
+.sessionUser {
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
+  margin-left: auto;
+}
+
+.newConvoButton {
+  height: fit-content;
+  cursor: pointer;
+  margin-left: auto;
 }
 
 .title {
